--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,10 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
-log4j.logger.org.apache.spark=ERROR
+#log4j.logger.org.apache.spark=ERROR
+
+log4j.logger.org.apache.spark=FATAL
+
+#log4j.rootCategory=ERROR, console
+
+log4j.logger.org=OFF
